--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header id="page-header">
     <div class="container">
       <h1>GIALLO BOOLEANO</h1>
-  </div>
+    </div>
   </header>
 
   
@@ -95,7 +95,23 @@
   </main>
 
    <!-- FOOTER -->
-  <footer>
+  <footer id="page-footer">
+    <div class="container">
+      <div class="company">
+        <p class="company-name bold">@2021 Giallo Booleano S.p.a.</p>
+        <p class="company-address">Via Tal dei Tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
+      </div>
+
+      <div class="footer-links">
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Terms of use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+          <li><a href="#">Disclaimer</a></li>
+        </ul>
+      </div>
+    </div>  
   </footer>
 
 </body>
