--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
     <!-- HEADER -->
   <header id="page-header">
-    <div class="container">
       <h1>GIALLO BOOLEANO</h1>
-    </div>
   </header>
 
   
@@ -38,23 +36,25 @@
     <div class="container">
       <div id="categories">
         <p>DOLCI E DESSERTS</p>
-        <h2>Tiramisù</h2>
+        <h2>Tiramisù <span class="hidden">(Dolce Tradizionale)</span></h2>
       </div>
 
       <!-- INFO RICETTA -->
       <div id="info">
-        <div class="info-img">
-          <img src="./img/image (10).png" alt="video">
-        </div>
-        <div class="info-recipe">
-          <h4>In breve</h4>
-          <ul>
-            <li>Difficoltà: <span class="bold">Facile</span></li>
-            <li>Tempo: <span class="bold">40 min</span></li>
-            <li>Porzione per: <span class="bold">8 persone</span></li>
-            <li>Costo: <span class="bold">contenuto</span></li>
-            <li><span class="bold">Note:</span> +2 ore di riposo in frigo</li>
-          </ul>
+        <div class="flex">
+          <div class="info-img">
+            <img src="./img/image (10).png" alt="video">
+          </div>
+          <div class="info-recipe">
+            <h4>In breve</h4>
+            <ul>
+              <li>Difficoltà: <span class="bold">Facile</span></li>
+              <li>Tempo: <span class="bold">40 min</span></li>
+              <li>Porzione per: <span class="bold">8 persone</span></li>
+              <li>Costo: <span class="bold">contenuto</span></li>
+              <li><span class="bold">Note:</span> +2 ore di riposo in frigo</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -69,7 +69,9 @@
 
       <!-- ADVERTISING -->
       <div id="advertising">
-        <img src="./img/banner.png" alt="" class="advertising-img">  
+        <div class="hidden">
+          <img src="./img/banner.png" alt="" class="advertising-img">  
+        </div>
       </div>
 
       <!-- PRESENTATION -->
@@ -79,24 +81,19 @@
           <div class="only-border"></div>
         </div>
 
-        <div class="presentation-content">
-          <div class="presentation-img">
-            <img src="./img/tiramisu.jpg" alt="presentation-img">
-          </div>
-          <div class="presentation-paragraph">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci <span class="bold"> quos dolore blanditiis</span> temporibus, nostrum repudiandae sapiente sed voluptas, suscipit sequi pariatur architecto accusantium nam, explicabo amet illo.
+        <div class="presentation-content clearfix">
+            <img class="presentation-img" src="./img/tiramisu.jpg" alt="presentation-img">
+            <p class="presentation-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci <span class="bold"> quos dolore blanditiis</span> temporibus, nostrum repudiandae sapiente sed voluptas, suscipit sequi pariatur architecto accusantium nam, explicabo amet illo.
             Distinctio in tempora voluptates sed. Voluptatibus quaerat ipsum aperiam omnis quos perspiciatis dicta ipsam praesentium pariatur excepturi eligendi corporis nam numquam optio placeat, ex impedit doloribus laboriosam atque esse officiis.
             vitae, aliquid odit magnam neque reprehenderit doloremque error sit quis unde voluptates magni maiores, <span class="bold">eveniet minima.</span> Libero, facere. Molestias incidunt dicta fuga maiores harum voluptatibus neque alias adipisci asperiores!
             Exercitationem dolore assumenda voluptatem aliquid molestias, eaque veritatis odio ut omnis harum et quisquam architecto illum atque aspernatur? Provident expedita esse iste sit harum assumenda ea blanditiis at perspiciatis. Possimus.
             Fuga unde in blanditiis consectetur quia repellendus dolores fugiat sint! Inventore <span class="bold">numquam</span> harum eligendi, distinctio necessitatibus sapiente odit ullam adipisci aspernatur facere neque omnis! Et velit tempore mollitia quibusdam?</p>
-          </div>
       </div>
     </div> <!--DIV CHIUSURA CONTAINER MAIN--> 
   </main>
 
    <!-- FOOTER -->
   <footer id="page-footer">
-    <div class="container">
       <div class="company">
         <p class="company-name bold">@2021 Giallo Booleano S.p.a.</p>
         <p class="company-address">Via Tal dei Tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
@@ -111,7 +108,6 @@
           <li><a href="#">Disclaimer</a></li>
         </ul>
       </div>
-    </div>  
   </footer>
 
 </body>
